# cmake_template

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
inc/cmk/: cmake_proj.h
lib/: CMakeLists.txt  cmake_proj.cc
src/: CMakeLists.txt  cmake_test.cc
tests/: CMakeLists.txt  cmake_test.cc
